1999-08-27  Tor Lillqvist  <tml@iki.fi>

	* app/menus.c: Add Acquire under the File menu.

	* plug-ins/twain: New (Windows-only) plug-in. Interface to TWAIN
	image sources. Written by Craig Setera.

	* plug-ins/Makefile.am: Add twain sources to EXTRA_DIST.

	* plug-ins/makefile.{cygwin,msc}: Move gimpressionist and twain
	around as they are in this directory now.

	* plug-ins/common/screenshot.c
	* plug-ins/winsnap/winsnap.c
	* plug-ins/twain/twain.c: Put them under File/Acquire.

1999-08-27  Tomas Ogren  <stric@ing.umu.se>

	* app/convert.c app/paint_funcs.c app/paths_dialog.c:
	i18n fixes and added a missing \n...
	
Thu Aug 26 15:19:19 PDT 1999 Manish Singh <yosh@gimp.org>

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/gimpressionist: added gimpressionist plugin

1999-08-27  Tor Lillqvist  <tml@iki.fi>

	* app/paint_core.h: Add a flags field and corresponding type
	ToolFlags to PaintCore. The only flag bit defined so far is
	TOOL_CAN_HANDLE_CHANGING_BRUSH, which those tools who don't mind
	if the brush changes while painting (as in the case of pixmap pipe
	brushes).

	* app/paint_core.c: Test above flag before calling the brush's
	select_brush method.

	* app/airbrush.c
	* app/paintbrush.c
	* app/pencil.c: Set above flag.

	* app/makefile.{cygwin,msc}: Add latest additions.

Thu Aug 26 14:16:12 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gimpbrushpreview.c: #include gimpbrushpipe.h and gimpbrushpipeP.h
	instead of gimpbrushpixmap.h

Thu Aug 26 22:10:11 MEST 1999  Sven Neumann <svengimp.org>

	* app/gimpbrushpreview.[ch]
	* app/gimppatternpreview.[ch]: new files
	Widgets that handle the complete preview machinery with scaling and
	popups for brushes and patterns.

	* app/Makefile.am
	* app/inidicator_area.c: Use the new widgets.

	The device-status dialog and the brush and pattern selectors should
	use the new widgets too. Hopefully the GtkLayout widget can handle
	this easily. As I am away till next week, I won't object if someone 
	else gives it a try...